--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -8,7 +8,7 @@
 		<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 	</head>
 	<body>
-		<div id="root"></div>
+		<div id="root" class="dark:bg-gray-900"></div>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
 </html>
