--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,6 +6,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Menu.World</title>
 		<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+			rel="stylesheet"
+		/>
+		<style>
+			body {
+				font-family: "Poppins", sans-serif;
+			}
+		</style>
 	</head>
 	<body>
 		<div id="root" class="dark:bg-gray-900"></div>
